kubernetes/apps/gluetun/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gluetun
  labels:
    app.kubernetes.io/name: gluetun
    app.kubernetes.io/part-of: homelab
